# TruthQuest

./: .gitignore  README.md  evaluate_conclusion.py  gen_data.py  pyproject.toml  run.py
metareasoning/dataprep/: data_generator.py
metareasoning/dataprep/data_config/: dataset_params.yaml
metareasoning/evaluator/: evaluator_base.py  evaluator_conclusion.py  evaluator_rationale.py
metareasoning/evaluator/evaluator_config/: meta-llama_Meta-Llama-3-8B-Instruct.yaml
metareasoning/models/: model_args.py  model_wrapper.py  reasoner.py
metareasoning/models/model_config/: meta-llama_Meta-Llama-3-70B-Instruct.yaml  mistralai_Mixtral-8x7B-Instruct-v0.1.yaml
metareasoning/prompts/: prompt_manager.py
metareasoning/prompts/evaluation_prompts/conclusion_evaluation/: few_shot_prompt.txt  prompt.txt  system_message.txt
metareasoning/prompts/evaluation_prompts/error_evaluation/: few_shot_prompt.txt  prompt.txt  system_message.txt
metareasoning/prompts/reasoning_prompts/cot/statements_0235/characters_3/: few_shot_prompt.txt
metareasoning/prompts/reasoning_prompts/cot/statements_0235/characters_4/: few_shot_prompt.txt
metareasoning/prompts/reasoning_prompts/cot/statements_0235/characters_5/: few_shot_prompt.txt
metareasoning/prompts/reasoning_prompts/cot/statements_0235/characters_6/: few_shot_prompt.txt
metareasoning/prompts/reasoning_prompts/cot/statements_025/characters_3/: few_shot_prompt.txt
metareasoning/prompts/task_prompts/: prompt copy.txt  prompt.txt  system_message.txt
metareasoning/utils/: utils.py
(+19 files in other folders)
