[tool.poetry]
name = "metareasoning"
version = "0.1.0"
description = "A repository that generates TruthQuest to assess the suppositional reasoning capabilities of current LLMs."
authors = ["Philipp Mondorf"]
license = "CC BY 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
sympy = "^1.12"
mypy = "^1.8.0"
isort = "^5.13.2"
pre-commit = "^3.6.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
tqdm = "^4.66.2"
datasets = "^2.18.0"
transformers = "^4.38.2"
accelerate = "^0.27.2"
matplotlib = "^3.8.4"
notion-client = "^2.2.1"
bitsandbytes = "^0.43.1"
ipykernel = "^6.29.4"
openai = "^1.30.1"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
